muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-script.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            DefaultNamespaceDeclaration {
                prefix: None,
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Script",
                                    "extra",
                                    "class",
                                ],
                            },
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Script",
                                    "class",
                                ],
                            },
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "script",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Script",
                                                    "extra",
                                                    "class",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "script",
                                    "content",
                                ],
                            },
                            combine: None,
                            pattern: Text,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "script",
                                sub_components: [],
                            },
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "script",
                                            sub_components: [],
                                        },
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "attlist",
                                                    sub_components: [
                                                        "script",
                                                    ],
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "SVG",
                                                    sub_components: [
                                                        "script",
                                                        "content",
                                                    ],
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "attlist",
                                sub_components: [
                                    "script",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Core",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "XLink",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "External",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "type",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "ContentType",
                                                        sub_components: [
                                                            "datatype",
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
