muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-view.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            DefaultNamespaceDeclaration {
                prefix: None,
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "View",
                                    "extra",
                                    "class",
                                ],
                            },
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "View",
                                    "class",
                                ],
                            },
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "view",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "View",
                                                    "extra",
                                                    "class",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "view",
                                    "content",
                                ],
                            },
                            combine: None,
                            pattern: Many0(
                                Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "SVG",
                                            sub_components: [
                                                "Description",
                                                "class",
                                            ],
                                        },
                                    },
                                ),
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "view",
                                sub_components: [],
                            },
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "view",
                                            sub_components: [],
                                        },
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "attlist",
                                                    sub_components: [
                                                        "view",
                                                    ],
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "SVG",
                                                    sub_components: [
                                                        "view",
                                                        "content",
                                                    ],
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "attlist",
                                sub_components: [
                                    "view",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Core",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "External",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "viewBox",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "ViewBoxSpec",
                                                        sub_components: [
                                                            "datatype",
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "preserveAspectRatio",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "PreserveAspectRatioSpec",
                                                        sub_components: [
                                                            "datatype",
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "zoomAndPan",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Choice(
                                                [
                                                    Value {
                                                        name: None,
                                                        value: "disable",
                                                    },
                                                    Value {
                                                        name: None,
                                                        value: "magnify",
                                                    },
                                                ],
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "viewTarget",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Text,
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
