muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-viewport-attrib.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "ClipValue",
                                sub_components: [
                                    "datatype",
                                ],
                            },
                            combine: None,
                            pattern: Data {
                                name: Name(
                                    Name {
                                        prefix: Some(
                                            Identifier {
                                                component: "xsd",
                                                sub_components: [],
                                            },
                                        ),
                                        local: Identifier {
                                            component: "string",
                                            sub_components: [],
                                        },
                                    },
                                ),
                                parameters: [],
                                except: None,
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "clip",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "clip",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "ClipValue",
                                                sub_components: [
                                                    "datatype",
                                                ],
                                            },
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "overflow",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "overflow",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "visible",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "hidden",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "scroll",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "auto",
                                            },
                                            Value {
                                                name: Some(
                                                    String,
                                                ),
                                                value: "inherit",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Viewport",
                                    "extra",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Viewport",
                                    "attrib",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "clip",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "overflow",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Viewport",
                                                    "extra",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
